tests/valid/BitwiseComplement_Valid_1.whiley
public export method test():
    assume ~00000000b == 11111111b