tests/invalid/XOR_Invalid_1.whiley
public export method test() -> int:
    int crc = 4294967295
    return crc ^ 11010101b
